--- a/finalProject/model.html
+++ b/finalProject/model.html
@@ -94,7 +94,7 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">意見回覆</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">留言板</a>
+                        <a href="#" class="w3-bar-item w3-button">聊天室</a>
                         <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
                     </div>
                 </div>
