--- a/finalProject/model.html
+++ b/finalProject/model.html
@@ -108,19 +108,20 @@
                 <div>
 
                     <p>
-                        內容區 &nbsp; </button>
+                        內容區 &nbsp;
                     </p>
-                    </form>
                 </div>
+
             </div>
         </div>
-        <!-- <foooter class="w3-container content" style="text-align: center;">
+    </div>
+    <!-- <foooter class="w3-container content" style="text-align: center;">
     	2017©逢甲大學 資訊系<br>
     	版權所有  翻版必究
     </foooter> -->
-        <!-- javascript -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./assets/js/mailus.js"></script>
+    <!-- javascript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./assets/js/mailus.js"></script>
     </div>
 </body>
 
