第二版 - 新增連結

--- a/finalProject/Hakka Festival/Festival.html
+++ b/finalProject/Hakka Festival/Festival.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <style>
         html {
             height: 100%;
@@ -330,10 +329,10 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">文化介紹</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">起源</a>
-                        <a href="#" class="w3-bar-item w3-button">飲食</a>
-                        <a href="#" class="w3-bar-item w3-button">建築</a>
-                        <a href="#" class="w3-bar-item w3-button">服飾文化</a>
+                        <a href="..\CulturalIntroduction\origin.html" class="w3-bar-item w3-button">起源</a>
+                        <a href="..\CulturalIntroduction\food.html" class="w3-bar-item w3-button">飲食</a>
+                        <a href="..\CulturalIntroduction\architecture.html" class="w3-bar-item w3-button">建築</a>
+                        <a href="..\CulturalIntroduction\clothes.html" class="w3-bar-item w3-button">服飾文化</a>
 
                     </div>
                 </div>
@@ -368,8 +367,8 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">意見回覆</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">留言板</a>
-                        <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
+                        <a href="..\feedback\ChatRoom\chat.html" class="w3-bar-item w3-button">聊天室</a>
+                        <a href="..\feedback\test.html" class="w3-bar-item w3-button">聯絡我們</a>
                     </div>
                 </div>
 
