--- a/finalProject/CulturalIntroduction/clothes.html
+++ b/finalProject/CulturalIntroduction/clothes.html
@@ -240,9 +240,21 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">客家節慶</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+                        <a href="..\Hakka Festival\Festival.html#ct1" class="w3-bar-item w3-button">台中東勢新丁粄節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct2" class="w3-bar-item w3-button">苗栗火旁龍</a>
+                        <a href="..\Hakka Festival\Festival.html#ct3" class="w3-bar-item w3-button">六堆祈福尖炮城</a>
+                        <a href="..\Hakka Festival\Festival.html#ct4" class="w3-bar-item w3-button">竹東天穿日 臺灣客家山歌比賽</a>
+                        <a href="..\Hakka Festival\Festival.html#ct5" class="w3-bar-item w3-button">客家桐花祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct6" class="w3-bar-item w3-button">海客文化藝術季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct7" class="w3-bar-item w3-button">乙未客家戰役文化季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct8" class="w3-bar-item w3-button">臺中巧聖仙師文化祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct9" class="w3-bar-item w3-button">客鼓鳴心-鼓王爭霸戰</a>
+                        <a href="..\Hakka Festival\Festival.html#ct10" class="w3-bar-item w3-button">「義魄千秋」義民祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct11" class="w3-bar-item w3-button">雲林‧詔安客家文化節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct12" class="w3-bar-item w3-button">國姓搶成功</a>
+                        <a href="..\Hakka Festival\Festival.html#ct13" class="w3-bar-item w3-button">臺東好米收冬祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct14" class="w3-bar-item w3-button">客家婚禮‧客家宴</a>
+
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
@@ -258,9 +270,11 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">每日一句</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+                        <a href="..\D0587129_finalproject\tune1.html" class="w3-bar-item w3-button">四縣腔</a>
+                        <a href="..\D0587129_finalproject\tune2.html" class="w3-bar-item w3-button">海陸腔</a>
+                        <a href="..\D0587129_finalproject\tune3.html" class="w3-bar-item w3-button">大埔腔</a>
+                        <a href="..\D0587129_finalproject\tune4.html" class="w3-bar-item w3-button">饒平腔</a>
+                        <a href="..\D0587129_finalproject\tune5.html" class="w3-bar-item w3-button">詔安腔</a>
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
@@ -291,15 +305,14 @@
             </div>
             <div class="w3-container content">
                 <div>
-                    <p>
-                        <i class="fa fa-home"></i>
-                    </p>
+
+                    <i class="fa fa-home"></i>
+
                     <a href=" ">首頁</a> > 文化介紹 > 傳統服飾
                 </div>
                 <div style="margin-left:5% ;font-family:微軟正黑體;text-shadow:7px 7px 7px rgb(255, 255, 255) ">
                     <div>
                         <br>
-
                         <div>
                             <strong>
                                 <p class="size1">客家傳統服飾—藍衫:</p>
