--- a/finalProject/CulturalIntroduction/origin.html
+++ b/finalProject/CulturalIntroduction/origin.html
@@ -81,6 +81,12 @@
 
         font-size: 30px;
 
+    }
+
+
+    .border {
+        border-top: 6px solid rgb(55, 77, 30);
+        background-color: lightgrey;
 
     }
 
@@ -240,9 +246,21 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">客家節慶</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+                        <a href="..\Hakka Festival\Festival.html#ct1" class="w3-bar-item w3-button">台中東勢新丁粄節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct2" class="w3-bar-item w3-button">苗栗火旁龍</a>
+                        <a href="..\Hakka Festival\Festival.html#ct3" class="w3-bar-item w3-button">六堆祈福尖炮城</a>
+                        <a href="..\Hakka Festival\Festival.html#ct4" class="w3-bar-item w3-button">竹東天穿日 臺灣客家山歌比賽</a>
+                        <a href="..\Hakka Festival\Festival.html#ct5" class="w3-bar-item w3-button">客家桐花祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct6" class="w3-bar-item w3-button">海客文化藝術季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct7" class="w3-bar-item w3-button">乙未客家戰役文化季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct8" class="w3-bar-item w3-button">臺中巧聖仙師文化祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct9" class="w3-bar-item w3-button">客鼓鳴心-鼓王爭霸戰</a>
+                        <a href="..\Hakka Festival\Festival.html#ct10" class="w3-bar-item w3-button">「義魄千秋」義民祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct11" class="w3-bar-item w3-button">雲林‧詔安客家文化節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct12" class="w3-bar-item w3-button">國姓搶成功</a>
+                        <a href="..\Hakka Festival\Festival.html#ct13" class="w3-bar-item w3-button">臺東好米收冬祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct14" class="w3-bar-item w3-button">客家婚禮‧客家宴</a>
+
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
@@ -258,9 +276,11 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">每日一句</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+                        <a href="..\D0587129_finalproject\tune1.html" class="w3-bar-item w3-button">四縣腔</a>
+                        <a href="..\D0587129_finalproject\tune2.html" class="w3-bar-item w3-button">海陸腔</a>
+                        <a href="..\D0587129_finalproject\tune3.html" class="w3-bar-item w3-button">大埔腔</a>
+                        <a href="..\D0587129_finalproject\tune4.html" class="w3-bar-item w3-button">饒平腔</a>
+                        <a href="..\D0587129_finalproject\tune5.html" class="w3-bar-item w3-button">詔安腔</a>
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
@@ -291,9 +311,9 @@
             </div>
             <div class="w3-container content">
                 <div>
-                    <p>
-                        <i class="fa fa-home"></i>
-                    </p>
+
+                    <i class="fa fa-home"></i>
+
                     <a href=" ">首頁</a> > 文化介紹 > 起源
                 </div>
                 <div style="margin-left:5% ;font-family:微軟正黑體;text-shadow:7px 7px 7px rgb(255, 255, 255) ">
@@ -327,6 +347,7 @@
                     </div>
                     <div>
                         <br>
+                        <hr>
                         <br>
                         <strong>
                             <p class="size1">「客家人」是指?</p>
@@ -338,26 +359,23 @@
                                 <img id="myImg" src="客家人.png" class="img-fluid img-thumbnail" alt="客家人介紹" width="360" height="300" onMouseOver="this.width=this.width*1.5;this.height=this.height*1.5"
                                     onMouseOut="this.width=this.width/1.5;this.height=this.height/1.5">
                             </picture>
+                            <p class="size2">
 
-                        </p>
-                        <br>
-                        <p class="size2">
+                                客家民系，俗稱「客家族群」或「客家人」，
+                                <br>在西方人類學上被簡稱作「Hakka」（客家語：客家，白話字：Hak-kâ)，
+                                <br>是漢族的一個分支，也是南方漢族影響深遠的族群之一，
+                                <br>為中國南方唯一不以地域命名之民系，也沒有自己的省份。
 
-                            客家民系，俗稱「客家族群」或「客家人」，
-                            <br>在西方人類學上被簡稱作「Hakka」（客家語：客家，白話字：Hak-kâ)，
-                            <br>是漢族的一個分支，也是南方漢族影響深遠的族群之一，
-                            <br>為中國南方唯一不以地域命名之民系，也沒有自己的省份。
+                            </p>
 
-                        </p>
-
-                        <p class="size2">
-                            該民系主要分布於華南各地，尤其以廣東東部（粵東）、北部（粵北）和西部（粵西）片區，
-                            <br>以及廣西東南部和福建西部（閩西）、江西南部（贛南）、台灣西北部（桃竹苗）及（高屏）地區為主要集中地，
-                            <br>加上其由北方漢人南遷與南方少數民族相互融合， 形成了一種兼具漢族與少數民族文化的獨特群體。
-                        </p>
+                            <p class="size2">
+                                該民系主要分布於華南各地，尤其以廣東東部（粵東）、北部（粵北）和西部（粵西）片區，
+                                <br>以及廣西東南部和福建西部（閩西）、江西南部（贛南）、台灣西北部（桃竹苗）及（高屏）地區為主要集中地，
+                                <br>加上其由北方漢人南遷與南方少數民族相互融合， 形成了一種兼具漢族與少數民族文化的獨特群體。
+                            </p>
                     </div>
                     <br>
-
+                    <hr>
 
                     <div>
                         <strong>
@@ -381,9 +399,13 @@
                             <ul class="size2">
                                 <li>客家人唱山歌，並且在不同的場合、節慶時有對歌的風俗。</li>
                                 <li>明清時期的客家人與其他漢族不同，僅少數有裹腳的習俗，多數窮人家女子一般赤腳或穿木屐，與男子無異。</li>
-                                <li>客家人有在清明節做艾粄的習俗，各地的掃墓時間不同（見掃墓條）。</li>
-                                <li>客家人傳統節日主要有春節、元宵節、清明節、端午節、中元節、中秋節、重陽節、冬至節和 一些地方性的神社祭會、 農事會及其它俗信紀念。</li>
-                                <li>客家人婚禮一般有說媒、坐談、合八字、定親、迎娶、三朝幾個環節。</li>
+                                <li>客家人有在清明節做艾粄(草仔粿)的習俗，各地的掃墓時間不同。</li>
+                                <li>客家人傳統節日主要有春節、元宵節、清明節、端午節、中元節、中秋節、重陽節、冬至節和一些地方性的神社祭會、農事會及其它俗信紀念。</li>
+                                <li>客家人婚禮一般有說媒、座談、合八字、定親、迎娶、
+                                    <abbr title="詳見註解">三朝</abbr>幾個環節。</li>
+                                <h4 class="border">
+                                    <strong>三朝:</strong>
+                                    <br>第一天迎娶時，新娘不會與新郎回家，第二天新郎會帶著食物以及禮物等等前往新娘家， 新娘依舊不跟新郎回家， 出嫁早晨新郎再回到新娘家時新娘會與新郎回到男方家中，當晚則要回家，第三日才會由女方家人帶著禮物前往男方家中"</h4>
                             </ul>
                         </div>
                         <br>
