--- a/finalProject/D0587129_finalproject/tune1.html
+++ b/finalProject/D0587129_finalproject/tune1.html
@@ -64,11 +64,11 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">每日一句</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="tune1.html" class="w3-bar-item w3-button">四縣腔</a>
-                        <a href="tune2.html" class="w3-bar-item w3-button">海陸腔</a>
-                        <a href="tune3.html" class="w3-bar-item w3-button">大埔腔</a>
-                        <a href="tune4.html" class="w3-bar-item w3-button">饒平腔</a>
-                        <a href="tune5.html" class="w3-bar-item w3-button">詔安腔</a>
+                        <a href="..\D0587129_finalproject\tune1.html" class="w3-bar-item w3-button">四縣腔</a>
+                        <a href="..\D0587129_finalproject\tune2.html" class="w3-bar-item w3-button">海陸腔</a>
+                        <a href="..\D0587129_finalproject\tune3.html" class="w3-bar-item w3-button">大埔腔</a>
+                        <a href="..\D0587129_finalproject\tune4.html" class="w3-bar-item w3-button">饒平腔</a>
+                        <a href="..\D0587129_finalproject\tune5.html" class="w3-bar-item w3-button">詔安腔</a>
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
