超連結修改

--- a/finalProject/CulturalIntroduction/clothes.html
+++ b/finalProject/CulturalIntroduction/clothes.html
@@ -298,8 +298,8 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">意見回覆</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">聊天室</a>
-                        <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
+                        <a href="http//:localhost:8888/" class="w3-bar-item w3-button">留言板</a>
+                        <a href="../feedback/test.html" class="w3-bar-item w3-button">聯絡我們</a>
                     </div>
                 </div>
             </div>
