--- a/finalProject/feedback/test.html
+++ b/finalProject/feedback/test.html
@@ -47,7 +47,46 @@
             <div class="w3-bar w3-light-green">
                 <a href="index.html" class="w3-bar-item w3-button">首頁</a>
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button">Dropdown</button>
+                    <button class="w3-button">客家節慶</button>
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="..\Hakka Festival\Festival.html#ct1" class="w3-bar-item w3-button">台中東勢新丁粄節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct2" class="w3-bar-item w3-button">苗栗火旁龍</a>
+                        <a href="..\Hakka Festival\Festival.html#ct3" class="w3-bar-item w3-button">六堆祈福尖炮城</a>
+                        <a href="..\Hakka Festival\Festival.html#ct4" class="w3-bar-item w3-button">竹東天穿日 臺灣客家山歌比賽</a>
+                        <a href="..\Hakka Festival\Festival.html#ct5" class="w3-bar-item w3-button">客家桐花祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct6" class="w3-bar-item w3-button">海客文化藝術季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct7" class="w3-bar-item w3-button">乙未客家戰役文化季</a>
+                        <a href="..\Hakka Festival\Festival.html#ct8" class="w3-bar-item w3-button">臺中巧聖仙師文化祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct9" class="w3-bar-item w3-button">客鼓鳴心-鼓王爭霸戰</a>
+                        <a href="..\Hakka Festival\Festival.html#ct10" class="w3-bar-item w3-button">「義魄千秋」義民祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct11" class="w3-bar-item w3-button">雲林‧詔安客家文化節</a>
+                        <a href="..\Hakka Festival\Festival.html#ct12" class="w3-bar-item w3-button">國姓搶成功</a>
+                        <a href="..\Hakka Festival\Festival.html#ct13" class="w3-bar-item w3-button">臺東好米收冬祭</a>
+                        <a href="..\Hakka Festival\Festival.html#ct14" class="w3-bar-item w3-button">客家婚禮‧客家宴</a>
+                    </div>
+                </div>
+                <div class="w3-dropdown-hover">
+                    <button class="w3-button">文化介紹</button>
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="..\CulturalIntroduction\origin.html" class="w3-bar-item w3-button">起源</a>
+                        <a href="..\CulturalIntroduction\food.html" class="w3-bar-item w3-button">飲食</a>
+                        <a href="..\CulturalIntroduction\architecture.html" class="w3-bar-item w3-button">建築</a>
+                        <a href="..\CulturalIntroduction\clothes.html" class="w3-bar-item w3-button">服飾文化</a>
+
+                    </div>
+                </div>
+                <div class="w3-dropdown-hover">
+                    <button class="w3-button">每日一句</button>
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="..\D0587129_finalproject\tune1.html" class="w3-bar-item w3-button">四縣腔</a>
+                        <a href="..\D0587129_finalproject\tune2.html" class="w3-bar-item w3-button">海陸腔</a>
+                        <a href="..\D0587129_finalproject\tune3.html" class="w3-bar-item w3-button">大埔腔</a>
+                        <a href="..\D0587129_finalproject\tune4.html" class="w3-bar-item w3-button">饒平腔</a>
+                        <a href="..\D0587129_finalproject\tune5.html" class="w3-bar-item w3-button">韶安腔</a>
+                    </div>
+                </div>
+                <div class="w3-dropdown-hover">
+                    <button class="w3-button">客家美食</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="#" class="w3-bar-item w3-button">Link 1</a>
                         <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -55,23 +94,7 @@
                     </div>
                 </div>
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button">Dropdown</button>
-                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
-                    </div>
-                </div>
-                <div class="w3-dropdown-hover">
-                    <button class="w3-button">Dropdown</button>
-                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
-                    </div>
-                </div>
-                <div class="w3-dropdown-hover">
-                    <button class="w3-button">Dropdown</button>
+                    <button class="w3-button">景點介紹</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="#" class="w3-bar-item w3-button">Link 1</a>
                         <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -81,8 +104,8 @@
                 <div class="w3-dropdown-hover">
                     <button class="w3-button">意見回覆</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">留言板</a>
-                        <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
+                        <a href="http//:localhost:8888/" class="w3-bar-item w3-button">聊天室</a>
+                        <a href="./test.html" class="w3-bar-item w3-button">聯絡我們</a>
                     </div>
                 </div>
             </div>
@@ -119,8 +142,8 @@
             </div>
         </div>
         <!-- <foooter class="w3-container content" style="text-align: center;">
-    	2017©逢甲大學 資訊系<br>
-    	版權所有  翻版必究
+        2017©逢甲大學 資訊系<br>
+        版權所有  翻版必究
     </foooter> -->
     <!-- javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
