--- a/finalProject/D0542295-FINAL PORJECT/LAST1.html
+++ b/finalProject/D0542295-FINAL PORJECT/LAST1.html
@@ -1,132 +1,251 @@
 <!DOCTYPE html>
+
 <html>
 
+
+
 <head>
-    <title>客家腔-海陸腔例句</title>
+
+    <title>一日遊推薦</title>
+
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
+
         html {
+
             height: 100%;
+
         }
+
+
+
         body {
+
             background-image: url('background.png');
+
+
+
             background-color: #F5F5F5;
+
             background-repeat: no-repeat;
+
             background-attachment: fixed;
+
             background-position: center;
+
             background-size: cover;
+
         }
+
+
+
         .content {
+
             background-color: #FFFFFF;
+
             background-repeat: no-repeat;
+
             background-attachment: fixed;
+
             background-position: center;
+
             background-size: cover;
+
         }
+
+
+
         .logo {
+
             height: 150px;
+
         }
+
     </style>
+
 </head>
 
+
+
 <body>
+
     <!-- Page Content -->
-    <div>
+
         <div style="width:70%;margin:0px auto;">
+
             <div class="w3-teal">
+
                 <div class="w3-container logo">
-                    <h1>客家腔-海陸腔例句</h1>
+
+                    <h1>台南一日遊</h1>
+
                 </div>
+
             </div>
+
             <div class="w3-bar w3-light-green">
+
                 <a href=" " class="w3-bar-item w3-button">首頁</a>
+
                 <div class="w3-dropdown-hover">
+
                     <button class="w3-button">客家節慶</button>
+
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
+
                         <a href="#" class="w3-bar-item w3-button">Link 1</a>
+
                         <a href="#" class="w3-bar-item w3-button">Link 2</a>
+
                         <a href="#" class="w3-bar-item w3-button">Link 3</a>
+
                     </div>
+
                 </div>
+
                 <div class="w3-dropdown-hover">
+
                     <button class="w3-button">文化介紹</button>
+
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
+
                         <a href="#" class="w3-bar-item w3-button">起源</a>
+
                         <a href="#" class="w3-bar-item w3-button">飲食</a>
+
                         <a href="#" class="w3-bar-item w3-button">建築</a>
+
                         <a href="#" class="w3-bar-item w3-button">服飾文化</a>
 
+
+
                     </div>
+
                 </div>
+
                 <div class="w3-dropdown-hover">
+
                     <button class="w3-button">每日一句</button>
+
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="tune1.html" class="w3-bar-item w3-button">四縣腔</a>
-                        <a href="tune2.html" class="w3-bar-item w3-button">海陸腔</a>
-                        <a href="tune3.html" class="w3-bar-item w3-button">大埔腔</a>
-                        <a href="tune4.html" class="w3-bar-item w3-button">饒平腔</a>
-                        <a href="tune5.html" class="w3-bar-item w3-button">詔安腔</a>
-                    </div>
-                </div>
-                <div class="w3-dropdown-hover">
-                    <button class="w3-button">客家美食</button>
-                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+
                         <a href="#" class="w3-bar-item w3-button">Link 1</a>
+
                         <a href="#" class="w3-bar-item w3-button">Link 2</a>
+
                         <a href="#" class="w3-bar-item w3-button">Link 3</a>
+
                     </div>
 
                 </div>
+
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button">景點介紹</button>
+
+                    <button class="w3-button">客家美食</button>
+
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
+
                         <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                        <a href="http://travel.network.com.tw/tourguide/point/showpage/105051.html" class="w3-bar-item w3-button">Link 2</a>
-                        <a href="http://travel.network.com.tw/tourguide/point/showpage/105031.html" class="w3-bar-item w3-button">Link 3</a>
+
+                        <a href="#" class="w3-bar-item w3-button">Link 2</a>
+
+                        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+
                     </div>
 
+
                 </div>
+
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button">意見回覆</button>
+
+                    <button class="w3-button">景點介紹</button>
+
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">聊天室</a>
-                        <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
+
+                        <a href="..\D0542295-FINAL PORJECT\TEST1.html" class="w3-bar-item w3-button">北部</a>
+
+                        <a href="..\D0542295-FINAL PORJECT\TEST2.html" class="w3-bar-item w3-button">中部</a>
+
+                        <a href="..\D0542295-FINAL PORJECT\TEST3.html" class="w3-bar-item w3-button">南部</a>
+
                     </div>
+
+
+                </div>
+
+                <div class="w3-dropdown-hover">
+
+                    <button class="w3-button">意見回復</button>
+
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+
+                        <a href="#" class="w3-bar-item w3-button">聊天室</a>
+
+                        <a href="#" class="w3-bar-item w3-button">聯絡我們</a>
+
+                    </div>
+
                 </div>
             </div>
+
             <div class="w3-container content">
+
                 <div>
+
                     <p>
+
                         <i class="fa fa-home"></i>
-                        <a href=" ">首頁</a> > 每日一句 > 海陸腔</p>
+
+                        <a href=" ">首頁</a> > 景點介紹 > 南部 > 推薦一日遊行程 >台南一日遊 </p>
+
                 </div>
+
                 <div>
 
-                    <div>
 
-                    <p>
-                        (1.)華語辭意:冷凍庫 ； 客家辭意:頭那 ； 客家音標:langˋ dungˇ kuˇ； 例句:    該家的冷凍庫，專門用來冷凍海產。<br>
-                        <br>
-                        (2.)華語辭意:鵝卵石 ； 客家辭意:石卵 ； 客家音標:shagˋ/shiagˋ lonˊ  ； 例句:校園肚用盡多石卵來鋪路。<br>
-                        <br>    
-                        (3.)華語辭意:門角 ； 客家辭意:門扇角 ； 客家音標:mun shanˇ/shianˇ gog ； 例句:細人仔搞囥尋仔，盡好囥門扇角。 &nbsp;
+
+                    <p > 
+                         ★台南一日遊行程:<br>
+                         出發→台南→林百貨(台南市中西區忠義路二段63號)→正興街(台南市中西區正興街)→國華街(台南市中西區國華街三段1號)→神農街(台南市中西區和平街79號)吃個東西→藍晒圖文創園區(臺南市南區西門路一段689巷2)拍拍照→漁光島(台南市安平區漁光里)看夕陽→回家。
+                          &nbsp;
+
                     </p>
+
                 </div>
+
+
 
             </div>
-        </div
+
+        </div>
+
     </div>
-        <!-- <foooter class="w3-container content" style="text-align: center;">
-        2017c逢甲大學 資訊系<br>
-        版權所有  翻版必究
+
+    <!-- <foooter class="w3-container content" style="text-align: center;">
+
+    	2017©逢甲大學 資訊系<br>
+
+    	版權所有  翻版必究
+
     </foooter> -->
-        <!-- javascript -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./assets/js/mailus.js"></script>
+
+    <!-- javascript -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="./assets/js/mailus.js"></script>
+
     </div>
+
 </body>
+
+
 
 </html>
